Fixed max width overflow

--- a/css/style.css
+++ b/css/style.css
@@ -1,7 +1,5 @@
 body {
   font-family: system-ui, sans-serif;
-  max-width: 85%;
-  margin: auto;
   padding: 1rem;
   background-color: #121212;
   color: #e0e0e0;
@@ -15,6 +13,9 @@ h1, h2, h3 {
 /* Main content */
 #main-content {
     flex-grow: 1;
+    flex-basis: 0;
+    overflow-wrap: break-word;
+    min-width: 0;
     padding: 1rem;
 }
 
@@ -28,6 +29,9 @@ h1, h2, h3 {
     display: flex;
     flex-direction: row;
     min-height: 100vh;
+
+    max-width: 85%;
+    margin: auto;
 }
 
 #sidebar {
@@ -38,6 +42,9 @@ h1, h2, h3 {
     padding: 1rem;
     border-right: 1px solid #333;
     box-sizing: border-box;
+    position: sticky;
+    top: 1rem;
+    height: fit-content;
 }
 #sidebar h2 {
     margin-top: 0;
